interface Base {
    void becomeTraitor();
    boolean understandsElderThings();
}