enum GeologicalPeriod {
    LATE_CRETACEOUS, EARLY_EOCENE
}